[metadata]
name = perf
summary = perf
author = dmsimard
author-email = dmsimard@redhat.com
home-page = https://github.com/dmsimard/pbr-perf
classifier =
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    perf

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
